--- a/client/src/app/movie-card/movie-card.component.html
+++ b/client/src/app/movie-card/movie-card.component.html
@@ -13,13 +13,15 @@
 
         <div class="section info">
             <div class="icon">
-                <i class="fa" *ngIf="movie.watched || movie.collected || movie.missing" [ngClass]="{
-                    'fa-eye': movie.watched,
-                    'fa-hdd-o': movie.collected,
-                    'fa-eye-slash': movie.missing
-                }"></i>
+                <i class="fa" *ngIf="movie.watched || movie.collected || movie.missing"
+                    [class.fa-eye]="movie.watched"
+                    [class.fa-hdd-o]="movie.collected"
+                    [class.fa-eye-slash]="movie.missing">
+                </i>
             </div>
-            <div class="text">{{movie.year + (movie.director ? ' by ' + movie.director : '')}}</div>
+            <div class="text">
+                {{((movie.date ? movie.date.year() : '') + (movie.director ? ' by ' + movie.director : '')) || 'No data'}}
+            </div>
         </div>
 
         <div class="section plot">
@@ -27,21 +29,17 @@
             <div class="text">{{movie.plot}}</div>
         </div>
 
-        <div class="section footl" *ngIf="movie.collected && movie.data.subtitles">
+        <div class="section footl subs" *ngIf="movie.collected && movie.subtitles">
             <div class="icon"><i class="fa fa-cc"></i></div>
             <div class="text">{{movie.subtitles}}</div>
         </div>
 
-        <div class="section footl" *ngIf="!movie.collected && movie.watched">
-            <div class="icon"></div>
-            <div class="text" style="font-size: 110%; opacity: 0.8;">
-                <rating [(ngModel)]="movie.rating" [max]="5" [readonly]="true"></rating>
-            </div>
+        <div class="section footl" *ngIf="!movie.collected && movie.isAfter">
+            <div class="icon"><i class="fa fa-clock-o"></i></div>
+            <div class="text">{{movie.dateAsText(true)}}</div>
         </div>
 
-        <div class="footr" *ngIf="movie.data.runtime">
-            <div>{{movie.runtime}}</div><i class="fa fa-clock-o"></i>
-        </div>
+        <div class="footr" *ngIf="movie.data.runtime"><div>{{movie.runtime}}</div></div>
 
         <div class="tools">
             <div class="btn-group" role="group">
@@ -52,17 +50,17 @@
                 </div>
                 <div class="btn-group">
                     <button type="button" class="btn btn-sm btn-primary" (click)="toggleWatched()">
-                        <i class="fa fa-lg fa-eye" [ngClass]="{'false': !movie.watched}"></i>
+                        <i class="fa fa-lg fa-eye" [class.false]="!movie.watched"></i>
                     </button>
                 </div>
                 <div class="btn-group">
                     <button type="button" class="btn btn-sm btn-primary" (click)="toggleCollected()">
-                        <i class="fa fa-lg fa-hdd-o" [ngClass]="{'false': !movie.collected}"></i>
+                        <i class="fa fa-lg fa-hdd-o" [class.false]="!movie.collected"></i>
                     </button>
                 </div>
                 <div class="btn-group">
                     <button type="button" class="btn btn-sm btn-primary" (click)="toggleWatchlist()">
-                        <i class="fa fa-lg fa-heart" [ngClass]="{'false': !movie.watchlist}"></i>
+                        <i class="fa fa-lg fa-heart" [class.false]="!movie.watchlist"></i>
                     </button>
                 </div>
                 <div class="btn-group">
@@ -73,6 +71,13 @@
                 <div class="btn-group">
                     <button type="button" class="btn btn-sm btn-success" (click)="openIni()">
                         <i class="fa fa-lg fa-info-circle"></i>
+                    </button>
+                </div>
+            </div>
+            <div class="btn-group" role="group" *ngIf="movie.collected || movie.watched">
+                <div class="btn-group" *ngFor="let r of [1,2,3,4,5]">
+                    <button type="button" class="btn btn-sm btn-primary" (click)="setRating(r)">
+                        <i class="fa fa-lg" [class.fa-star-o]="movie.rating < r" [class.fa-star]="movie.rating >= r"></i>
                     </button>
                 </div>
             </div>
