--- a/client/src/app/series-card/series-card.component.html
+++ b/client/src/app/series-card/series-card.component.html
@@ -24,21 +24,21 @@
         <ng-container *ngIf="!series.error && episode">
             <div class="section info">
                 <div class="icon">
-                    <i class="fa" *ngIf="episode.watched || episode.collected || episode.missing" [ngClass]="{
-                        'fa-eye': episode.watched,
-                        'fa-hdd-o': episode.collected,
-                        'fa-eye-slash': episode.missing
-                    }"></i>
+                    <i class="fa" *ngIf="episode.watched || episode.collected || episode.missing"
+                        [class.fa-eye]="episode.watched"
+                        [class.fa-hdd-o]="episode.collected"
+                        [class.fa-eye-slash]="episode.missing">
+                    </i>
                 </div>
                 <div class="text">
                     <span style="font-weight: bold;">{{episode.season}}</span>
                     <span>&#8226;</span>
                     <span style="font-weight: bold;">{{episode.episode}}</span>
                     <span *ngIf="episode === series.available && series.episodes.available > 1">
-                        {{'(+' + (series.episodes.available-1) + ')'}}
+                        {{'(+' + (series.episodes.available - 1) + ')'}}
                     </span>
                     <span *ngIf="episode === series.missing && series.episodes.missing > 1">
-                        {{'(+' + (series.episodes.missing-1) + ')'}}
+                        {{'(+' + (series.episodes.missing - 1) + ')'}}
                     </span>
                     <span>{{': ' + episode.title}}</span>
                 </div>
@@ -47,20 +47,18 @@
                 <div class="icon"><i class="fa fa-quote-left"></i></div>
                 <div class="text">{{episode.plot || series.plot}}</div>
             </div>
-            <div class="section footl" *ngIf="episode.subtitles">
+            <div class="section footl subs" *ngIf="episode.subtitles">
                 <div class="icon"><i class="fa fa-cc"></i></div>
                 <div class="text">{{episode.subtitles}}</div>
             </div>
             <div class="section footl" *ngIf="!episode.subtitles"
-                [style.color]="episode.airsToday ? 'darkred' : !episode.firstAired ? 'lightgray' : null">
+                [style.color]="episode.isToday ? 'darkred' : !episode.date ? 'lightgray' : null">
                 <div class="icon"><i class="fa fa-clock-o"></i></div>
-                <div class="text">{{episode.airedText(true) || 'unknown'}}</div>
+                <div class="text">{{episode.dateAsText(true) || 'unknown'}}</div>
             </div>
         </ng-container>
 
-        <div class="footr" [ngClass]="{'ended': series.ended}">
-            <div>{{series.network}}</div><i class="fa fa-rss" *ngIf="!series.ended"></i>
-        </div>
+        <div class="footr" [class.ended]="series.ended"><div>{{series.airing}}</div></div>
 
         <div class="tools">
             <div class="btn-group" role="group">
@@ -69,9 +67,19 @@
                         <i class="fa fa-lg fa-ban"></i>
                     </button>
                 </div>
+                <div class="btn-group" *ngIf="episode">
+                    <button type="button" class="btn btn-sm btn-primary" (click)="toggleWatched()">
+                        <i class="fa fa-lg fa-eye" [class.false]="!episode.watched"></i>
+                    </button>
+                </div>
+                <div class="btn-group" *ngIf="episode">
+                    <button type="button" class="btn btn-sm btn-primary" (click)="toggleCollected()">
+                        <i class="fa fa-lg fa-hdd-o" [class.false]="!episode.collected"></i>
+                    </button>
+                </div>
                 <div class="btn-group">
                     <button type="button" class="btn btn-sm btn-primary" (click)="toggleWatchlist()">
-                        <i class="fa fa-lg fa-heart" [ngClass]="{'false': !series.watchlist}"></i>
+                        <i class="fa fa-lg fa-heart" [class.false]="!episode.watchlist"></i>
                     </button>
                 </div>
                 <div class="btn-group" *ngIf="series.imdbUrl">
@@ -85,17 +93,14 @@
                     </button>
                 </div>
             </div>
-            <div class="btn-group" role="group" *ngIf="episode">
-                <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-primary" (click)="toggleWatched()">
-                        <i class="fa fa-lg fa-eye" [ngClass]="{'false': !episode.watched}"></i>
+            <div class="btn-group" role="group" *ngIf="series.watchlist">
+                <div class="btn-group" *ngFor="let r of [1,2,3,4,5]">
+                    <button type="button" class="btn btn-sm btn-primary" (click)="setRating(r)">
+                        <i class="fa fa-lg" [class.fa-star-o]="series.rating < r" [class.fa-star]="series.rating >= r"></i>
                     </button>
                 </div>
-                <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-primary" (click)="toggleCollected()">
-                        <i class="fa fa-lg fa-hdd-o" [ngClass]="{'false': !episode.collected}"></i>
-                    </button>
-                </div>
+            </div>
+            <!--<div class="btn-group" role="group" *ngIf="episode">
                 <div class="btn-group" *ngIf="episode.imdbUrl">
                     <button type="button" class="btn btn-sm btn-success"
                         (click)="openLink(episode.imdbUrl)">
@@ -107,7 +112,7 @@
                         <i class="fa fa-lg fa-info-circle"></i>
                     </button>
                 </div>
-            </div>
+            </div>-->
         </div>
 
     </div>
