--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -197,9 +197,13 @@ ag-grid-angular {
     flex-shrink: 1;
     flex-direction: column;
     align-items: flex-end;
-    bottom: 28px;
-    right: -228px;
-    transition: right 0.2s;
+    align-content: center;
+    justify-content: center;
+    vertical-align: middle;
+    top: 0;
+    bottom: 0;
+    right: -300px;
+    transition: right 0.25s;
     z-index: 100;
 }
 
