--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -32,12 +32,12 @@
         </div>
     </div>
 </div>
-<div class="overlay" *ngIf="config.locked">
-    <i class="fa fa-spinner fa-pulse fa-3x fa-fw" *ngIf="!config.confirmPrompt"></i>
+<div class="overlay" *ngIf="api.locked">
+    <i class="fa fa-spinner fa-pulse fa-3x fa-fw"></i>
 </div>
 <div id="GridBox">
-    <ag-grid-angular id="GridObj" class="ag-theme-fresh" [gridOptions]="titleGrid"
-        [rowData]="titleRows" [columnDefs]="titleCols">
+    <ag-grid-angular id="GridObj" class="ag-theme-fresh" [gridOptions]="titleGrid" [columnDefs]="titleCols"
+        [rowData]="titleRows">
     </ag-grid-angular>
 </div>
 <div class="form-group form-group-sm title-filter">
