--- a/client/src/app/series-card/series-card.component.css
+++ b/client/src/app/series-card/series-card.component.css
@@ -3,16 +3,8 @@
     width: 106px;
 }
 
-.card.series .details {
-    width: 100%;
-}
-
-.card.series .footr.ended {
+.ended {
     color: darkred;
     font-weight: bold;
     opacity: 0.7;
-}
-
-.card.series .footr .fa {
-    margin: auto 0 auto 5px;
 }
