--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -19,6 +19,11 @@ body {
     color: #bdbdbd;
 }
 
+.btn-sm, .btn-group-sm > .btn {
+    line-height: 22px;
+    padding: 5px 9px;
+}
+
 /*
 vedi https://stackoverflow.com/a/34643330/28852
  */
@@ -29,7 +34,7 @@ app-root {
     align-items: center;
     flex: 1 1 auto;
     width: 100%;
-    height: 100%;/**/
+    height: 100%;
 }
 
 
@@ -65,7 +70,8 @@ ag-grid-angular {
 
 /**/
 
-.card {
+.card,
+.form {
     display: flex;
     flex-grow: 0;
     flex-shrink: 0;
@@ -74,26 +80,34 @@ ag-grid-angular {
     box-shadow: 2px 2px 10px darkgray;
     border: 1px solid darkgrey;
     border-radius: 3px;
-    margin: 15px;
+    line-height: 116%;
     padding: 0;
+}
+
+.card {
+    font-size: 90%;
+    margin: 15px;
     height: 156px;
     width: 450px;
 }
 
-.card .poster,
-.card .details {
+.form {
+    font-size: 110%;
+    margin: 0;
+}
+
+.poster,
+.details {
     display: flex;
     flex-grow: 0;
     position: relative;
 }
 
-.card .poster {
+.poster {
     flex-shrink: 0;
-    /* 780 : 1170 = 133 : 200 */
-    width: 133px;
 }
 
-.card .poster:before {
+.poster:before {
     position: absolute;
     content: "\f03e";
     font-family: FontAwesome;
@@ -109,88 +123,119 @@ ag-grid-angular {
     right: 0;
 }
 
-.card .poster img {
+.poster img {
     z-index: 2;
 }
 
-.card .details {
+.details {
     flex-shrink: 1;
     flex-direction: column;
-    padding: 5px 10px 5px 10px;
     color: darkslategray;
     overflow: hidden;
     width: 100%;
 }
 
-.card .section {
-    margin: 3px 0;
+.card .details {
+    margin: 5px;
 }
 
-.card .section {
+.form .details {
+    margin: 10px;
+}
+
+.section {
     display: flex;
+    flex-grow: 0;
+    flex-shrink: 0;
     flex-direction: row;
     vertical-align: top;
-    white-space: normal;
+    white-space: nowrap;
     overflow: hidden;
 }
 
-.card .section div {
+.card .section {
+    margin: 1px 5px;
+    height: 18px;
+}
+
+.form .section {
+    margin: 3px 10px;
+    height: 22px;
+}
+
+.section div {
     display: flex;
-    min-height: 18px;
 }
 
-.card .section div.icon {
-    flex-grow: 0;
-    flex-shrink: 0;
-    margin-top: 0;
-    width: 20px;
+.title {
+    /*background-color: lightgreen;*/
 }
 
-.card .section div.icon .fa {
-    display: flex;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.card .section div.text {
-    font-size: 90%;
-    line-height: 17px;
-    margin-left: 5px;
-}
-
-.card .section.title .text,
-.card .section.info .text,
-.card .section.footl .text {
-    white-space: nowrap;
-}
-
-.card .section.title div.text {
+.title .text {
     font-weight: bold;
 }
 
-.card .section.plot {
-    height: 68px;
+.info {
+    /*background-color: sandybrown;*/
 }
 
-.card .section.plot .text {
-    opacity: 0.65;
+.rows {
+    /*background-color: seagreen;*/
+    flex-grow: 1;
+    flex-shrink: 1;
+    height: unset;
 }
 
-.card .footr {
+.footer {
+    /*background-color: violet;*/
+}
+
+.icon {
+    flex-grow: 0;
+    flex-shrink: 0;
+}
+
+.card .icon {
+    height: 18px;
+    width: 18px;
+    margin-right: 5px;
+}
+
+.form .icon {
+    height: 22px;
+    width: 22px;
+    margin-right: 10px;
+}
+
+.icon .fa {
     display: flex;
-    flex: 0 0 auto;
-    flex-direction: row;
-    vertical-align: middle;
-    position: absolute;
-    background-color: white;
-    font-size: 85%;
-    padding: 4px;
-    bottom: 4px;
-    right: 8px;
-    z-index: 50;
+    margin: auto;
 }
 
-.card .tools {
+.text {
+    flex: 1 1 auto;
+    margin: auto 0;
+}
+
+.rows .text {
+    white-space: normal !important;
+    margin: 0 0;
+}
+
+.text div {
+    display: flex;
+    flex: 1 0 auto;
+}
+
+.plot {
+    opacity: 0.7;
+}
+
+.spacer {
+    flex: 2 1 auto;
+}
+
+.tools {
     display: flex;
     position: absolute;
     flex-grow: 0;
@@ -207,21 +252,49 @@ ag-grid-angular {
     z-index: 100;
 }
 
-.card .details:hover .tools {
+.details:hover .tools {
     right: -7px;
 }
 
-.card .tools > div {
+.tools > div {
     flex-shrink: 1;
     margin: 5px;
     box-shadow: -1px 2px 10px 0 darkgray;
 }
 
-.card .tools .fa.false {
+.tools .fa.false {
     opacity: 0.3;
 }
 
-.btn-sm, .btn-group-sm > .btn {
-    line-height: 22px;
-    padding: 5px 9px;
+
+/**/
+
+app-series-form {
+    width: 100%;
+    height: 100%;
 }
+
+.modal-dialog,
+.modal-content {
+    display: flex;
+    width: auto;
+    min-width: unset;
+    max-width: unset;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.modal-dialog {
+    height: 90%;
+}
+
+/*
+.modal-body {
+    display: flex;
+    flex-grow: 0;
+    flex-shrink: 1;
+    flex-direction: row;
+    background-color: white;
+    padding: 0;
+}
+*/
