--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -36,8 +36,8 @@
     <i class="fa fa-spinner fa-pulse fa-3x fa-fw"></i>
 </div>
 <div id="GridBox">
-    <ag-grid-angular id="GridObj" class="ag-theme-fresh" [gridOptions]="titleGrid" [columnDefs]="titleCols"
-        [rowData]="titleRows">
+    <ag-grid-angular id="GridObj" class="ag-theme-fresh"
+        [gridOptions]="titleGrid" [columnDefs]="titleCols" [rowData]="titleRows">
     </ag-grid-angular>
 </div>
 <div class="form-group form-group-sm title-filter">
