--- a/client/src/app/episode-card/episode-card.component.html
+++ b/client/src/app/episode-card/episode-card.component.html
@@ -1,7 +1,41 @@
-<div class="card">
+<div class="cell">
 
-    <div class="poster">
-        <img src="{{episode.thumbnail}}" *ngIf="episode.thumbnail" height="{{thumbHeight}}" width="{{thumbWidth}}"/>
+    <div class="thumb">
+        <img src="{{episode.thumbnail}}" *ngIf="episode.thumbnail"
+            height="{{thumbHeight}}" width="{{thumbWidth}}"/>
+    </div>
+
+    <div class="ep-details">
+
+        <div class="ep-title">
+
+            <i class="fa" [class.fa-cc]="episode.collected && episode.subtitles"></i>
+            <span>{{episode.episode}} - {{episode.title}}</span>
+
+            <!--<a *ngIf="episode.imdbUrl" (click)="openLink(episode.imdbUrl)">
+                <span>{{episode.episode}} - {{episode.title}}</span>
+                <i class="fa fa-lg fa-imdb"></i>
+            </a>-->
+        </div>
+
+        <div class="ep-plot">
+            <i class="fa fa-quote-left"></i>
+            <span>{{episode.plot}}</span>
+        </div>
+
+    </div>
+
+    <div class="right btn-group-vertical" role="group">
+        <div class="btn-group">
+            <button type="button" class="btn btn-sm btn-default" (click)="toggleWatched()">
+                <i class="fa fa-2x fa-eye" [class.false]="!episode.watched"></i>
+            </button>
+        </div>
+        <div class="btn-group">
+            <button type="button" class="btn btn-sm btn-default" (click)="toggleCollected()">
+                <i class="fa fa-2x fa-hdd-o" [class.false]="!episode.collected"></i>
+            </button>
+        </div>
     </div>
 
 </div>
