--- a/client/src/app/series-form/series-form.component.css
+++ b/client/src/app/series-form/series-form.component.css
@@ -1,19 +1,45 @@
-.modal-body {
+.modal-header {
     display: flex;
-    flex: 1 0 auto;
+    flex: 1 1 auto;
     flex-direction: column;
     background-color: white;
+    box-shadow: 2px 2px 5px darkgray;
+    margin: 0 0 5px 0;
     padding: 0;
-    height: 100%;
     width: 758px;
 }
 
-.tab-container {
-    margin: 5px;
+.modal-body {
+    display: flex;
+    flex: 1 1 auto;
+    flex-direction: column;
+    background-color: white;
+    padding: 5px;
+    width: 758px;
+    overflow-y: auto;
 }
 
-.nav-item {
+.tab-container {
+    margin: 2px;
     font-weight: bold;
+}
+
+.ep-box {
+    display: flex;
+    position: relative;
+    flex-grow: 1;
+    flex-shrink: 1;
+    flex-basis: auto;
+    flex-direction: row;
+    border: 1px solid darkgrey;
+    box-shadow: 2px 2px 10px darkgray;
+    border-radius: 3px;
+    line-height: 116%;
+    font-size: 90%;
+    padding: 0;
+    margin: 5px;
+
+    background-color: bisque;
 }
 
 #GridBox {
