--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -70,6 +70,22 @@ ag-grid-angular {
 
 /**/
 
+title-parent,
+title-cell,
+app-movie-card,
+app-series-card,
+app-episode-card {
+    display: flex;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
+
+
+/**/
+
 .card,
 .form {
     display: flex;
@@ -87,7 +103,7 @@ ag-grid-angular {
 .card {
     font-size: 90%;
     margin: 15px;
-    height: 156px;
+    height: 158px;
     width: 450px;
 }
 
@@ -99,8 +115,9 @@ ag-grid-angular {
 .poster,
 .details {
     display: flex;
-    flex-grow: 0;
     position: relative;
+    flex-grow: 0;
+    flex-direction: column;
 }
 
 .poster {
@@ -129,7 +146,6 @@ ag-grid-angular {
 
 .details {
     flex-shrink: 1;
-    flex-direction: column;
     color: darkslategray;
     overflow: hidden;
     width: 100%;
@@ -262,7 +278,7 @@ ag-grid-angular {
     box-shadow: -1px 2px 10px 0 darkgray;
 }
 
-.tools .fa.false {
+.fa.false {
     opacity: 0.3;
 }
 
@@ -287,14 +303,3 @@ app-series-form {
 .modal-dialog {
     height: 90%;
 }
-
-/*
-.modal-body {
-    display: flex;
-    flex-grow: 0;
-    flex-shrink: 1;
-    flex-direction: row;
-    background-color: white;
-    padding: 0;
-}
-*/
