--- a/client/src/app/series-form/series-form.component.css
+++ b/client/src/app/series-form/series-form.component.css
@@ -1,6 +1,6 @@
 .modal-header {
     display: flex;
-    flex: 1 1 auto;
+    flex: 0 0 auto;
     flex-direction: column;
     background-color: white;
     box-shadow: 2px 2px 5px darkgray;
@@ -27,9 +27,7 @@
 .ep-box {
     display: flex;
     position: relative;
-    flex-grow: 1;
-    flex-shrink: 1;
-    flex-basis: auto;
+    flex: 0 0 auto;
     flex-direction: row;
     border: 1px solid darkgrey;
     box-shadow: 2px 2px 10px darkgray;
@@ -38,21 +36,107 @@
     font-size: 90%;
     padding: 0;
     margin: 5px;
-
-    background-color: bisque;
+    height: 102px;
+    /*background-color: bisque;*/
 }
 
-#GridBox {
+.ep-thumb {
     display: flex;
     position: relative;
-    height: 100%;
-    width: 100%;
-    /*
+    flex: 0 0 auto;
+    flex-direction: column;
+    align-items: center;
+    background-color: buttonface;
+}
+
+.ep-thumb img {
+    display: flex;
+    position: relative;
+}
+
+.ep-thumb .fa {
+    display: flex;
+    position: relative;
+    flex: 0 0 auto;
+    font-size: 70px;
+    color: white;
+    opacity: 0.6;
+    margin: auto;
+}
+
+.ep-data {
+    display: flex;
+    position: relative;
     flex-grow: 1;
     flex-shrink: 1;
-    flex-direction: column;*/
-    /*top: 40px;
-    bottom: 0;
-    left: 0;
-    right: 0;*/
+    flex-basis: auto;
+    flex-direction: column;
+    margin: 4px 0 5px 4px;
+    overflow: hidden;
+}
+
+.ep-section {
+    display: flex;
+    position: relative;
+    flex-direction: row;
+    vertical-align: top;
+    align-items: flex-start;
+    align-content: flex-start;
+    justify-content: flex-start;
+    overflow: hidden;
+}
+
+.ep-section .fa {
+    display: flex;
+    position: relative;
+    flex: 0 0;
+    height: 20px;
+    min-width: 20px;
+    text-align: center;
+    vertical-align: middle;
+}
+
+.ep-section i:before {
+    display: flex;
+    position: relative;
+    margin: auto;
+}
+
+.ep-section span {
+    display: flex;
+    position: relative;
+}
+
+.ep-section.s {
+    flex-grow: 0;
+    flex-shrink: 0;
+}
+
+.ep-section.s span {
+    margin: auto 5px;
+    white-space: nowrap;
+}
+
+.ep-section.m {
+    flex-grow: 1;
+    flex-shrink: 1;
+}
+
+.ep-section.m span {
+    margin: 1px 5px;
+    white-space: normal;
+}
+
+.ep-right {
+    display: flex;
+    position: relative;
+    margin: auto 7px;
+}
+
+a .fa-imdb {
+    display: none;
+}
+
+a:hover .fa-imdb {
+    display: inline-block;
 }
