--- a/client/src/app/series-form/series-form.component.html
+++ b/client/src/app/series-form/series-form.component.html
@@ -5,16 +5,51 @@
             id="{{sno}}" (select)="loadSeason(sno)"></tab>
     </tabset>
 </div>
+
 <div class="modal-body">
+    <div class="ep-box" *ngFor="let episode of episodes">
 
-    <!--<div id="GridBox">
-        <ag-grid-angular id="GridObj" class="ag-theme-fresh"
-            [gridOptions]="epGrid" [columnDefs]="epCols" [rowData]="epRows">
-        </ag-grid-angular>
-    </div>-->
+        <div class="ep-thumb" [style.width.px]="maxThumbWidth">
+            <img *ngIf="episode.thumbnail" src="{{episode.thumbnail}}" height="100px" width="{{thumbWidth(episode)}}"/>
+            <i *ngIf="!episode.thumbnail" class="fa fa-picture-o"></i>
+        </div>
 
-    <div class="ep-box" *ngFor="let ep of episodes">
+        <div class="ep-data">
+
+            <div class="ep-section s">
+                <i class="fa"
+                    [class.fa-eye]="episode.watched"
+                    [class.fa-cc]="episode.collected && episode.subtitles"
+                    [class.fa-hdd-o]="episode.collected && !episode.subtitles"
+                    [class.fa-eye-slash]="episode.missing">
+                </i>
+                <span class="bold">{{episode.episode}}: {{episode.title}}</span>
+            </div>
+
+            <div class="ep-section m">
+                <i class="fa fa-quote-left"></i>
+                <span [style.opacity]="0.8">{{episode.plot || 'Unknown'}}</span>
+            </div>
+
+            <div class="ep-section s">
+                <i class="fa fa-clock-o"></i>
+                <span>{{episode.dateAsText(true)}}</span>
+            </div>
+
+        </div>
+
+        <div class="ep-right btn-group-vertical" role="group">
+            <div class="btn-group">
+                <button type="button" class="btn btn-sm btn-default" (click)="toggleWatched()">
+                    <i class="fa fa-2x fa-eye" [class.false]="!episode.watched"></i>
+                </button>
+            </div>
+            <div class="btn-group">
+                <button type="button" class="btn btn-sm btn-default" (click)="toggleCollected()">
+                    <i class="fa fa-2x fa-hdd-o" [class.false]="!episode.collected"></i>
+                </button>
+            </div>
+        </div>
 
     </div>
-
 </div>
