--- a/client/src/app/series-card/series-card.component.css
+++ b/client/src/app/series-card/series-card.component.css
@@ -1,10 +1,19 @@
+.card.series {
+    margin: 15px;
+    height: 158px;
+    width: 450px;
+}
+
 .card.series .poster {
     /* 680 : 1000 = 136 : 156 */
     width: 106px;
 }
 
+.card.series .details {
+    margin: 6px 5px 7px 8px;
+}
+
 .ended {
     color: darkred;
     font-weight: bold;
-    opacity: 0.7;
 }
