--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -76,8 +76,7 @@ ag-grid-angular {
 title-parent,
 title-cell,
 app-movie-card,
-app-series-card,
-app-episode-card {
+app-series-card {
     display: flex;
     position: absolute;
     top: 0;
@@ -113,6 +112,7 @@ app-series-form {
 
 .card {
     display: flex;
+    position: relative;
     flex-grow: 0;
     flex-shrink: 0;
     flex-direction: row;
@@ -121,122 +121,95 @@ app-series-form {
     border: 1px solid darkgrey;
     border-radius: 3px;
     line-height: 116%;
-    margin: 15px;
-    padding: 0;
     font-size: 90%;
-    height: 158px;
-    width: 450px;
-}
-
-.poster,
-.details {
-    display: flex;
-    position: relative;
-    flex-grow: 0;
-    flex-direction: column;
+    padding: 0;
 }
 
 .poster {
-    flex-shrink: 0;
-}
-
-.poster:before {
-    position: absolute;
-    content: "\f03e";
-    font-family: FontAwesome;
-    font-size: 60px;
-    background-color: darkgray;
-    text-align: center;
-    color: white;
-    opacity: 0.2;
-    padding-top: 30px;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
+    display: flex;
+    position: relative;
+    flex: 0 0 auto;
+    flex-direction: column;
+    align-items: center;
+    background-color: buttonface;
 }
 
 .poster img {
-    z-index: 2;
+    display: flex;
+    position: relative;
+}
+
+.poster .fa {
+    display: flex;
+    position: relative;
+    flex: 0 0 auto;
+    font-size: 70px;
+    color: white;
+    opacity: 0.6;
+    margin: auto;
 }
 
 .details {
+    display: flex;
+    position: relative;
+    flex-grow: 1;
     flex-shrink: 1;
+    flex-basis: auto;
+    flex-direction: column;
     color: darkslategray;
     overflow: hidden;
-    margin: 5px;
-    width: 100%;
 }
 
 .section {
     display: flex;
-    flex-grow: 0;
-    flex-shrink: 0;
+    position: relative;
     flex-direction: row;
     vertical-align: top;
-    margin: 1px 5px;
-    height: 18px;
-    white-space: nowrap;
+    align-items: flex-start;
+    align-content: flex-start;
+    justify-content: flex-start;
     overflow: hidden;
 }
 
-.section div {
+.section .fa {
     display: flex;
+    position: relative;
+    flex: 0 0;
+    height: 20px;
+    min-width: 20px;
+    text-align: center;
+    vertical-align: middle;
 }
 
-.title {
-    /*background-color: lightgreen;*/
-}
-
-.title .text {
-    font-weight: bold;
-}
-
-.info {
-    /*background-color: sandybrown;*/
-}
-
-.rows {
-    /*background-color: seagreen;*/
-    flex-grow: 1;
-    flex-shrink: 1;
-    height: unset;
-}
-
-.footer {
-    /*background-color: violet;*/
-}
-
-.icon {
-    flex-grow: 0;
-    flex-shrink: 0;
-    margin-right: 5px;
-    height: 18px;
-    width: 18px;
-}
-
-.icon .fa {
+.section i:before {
     display: flex;
+    position: relative;
     margin: auto;
 }
 
-.text {
-    flex: 1 1 auto;
-    margin: auto 0;
-}
-
-.rows .text {
-    white-space: normal !important;
-    margin: 0 0;
-}
-
-.text div {
+.section span {
     display: flex;
-    flex: 1 0 auto;
+    position: relative;
 }
 
-.plot {
-    opacity: 0.7;
+.section.s {
+    flex-grow: 0;
+    flex-shrink: 0;
+}
+
+.section.s span {
+    margin: auto 5px;
+    white-space: nowrap;
+}
+
+.section.m {
+    flex-grow: 1;
+    flex-shrink: 1;
+}
+
+.section.m span {
+    margin: 1px 5px;
+    white-space: normal;
 }
 
 .spacer {
