--- a/client/src/app/movie-card/movie-card.component.css
+++ b/client/src/app/movie-card/movie-card.component.css
@@ -5,10 +5,11 @@
 }
 
 .card.movie .details {
-    margin: 6px 5px 7px 8px;
+    margin: 6px 0 7px 8px;
+    padding-right: 5px;
 }
 
 .card.movie .poster {
-    /* 780 : 1170 = 133 : 156 */
-    width: 104px;
+    /* 780 : 1170 = 133 : 154
+    width: 104px; */
 }
