--- a/client/src/app/series-card/series-card.component.html
+++ b/client/src/app/series-card/series-card.component.html
@@ -9,75 +9,73 @@
 
         <div class="section s" title="{{series.title}}">
             <i class="fa fa-television"></i>
-            <span class="bold">{{series.title}}</span>
+            <span class="bold">
+                <a *ngIf="series.imdbUrl" href="{{series.imdbUrl}}" target="_blank"
+                    title="Open IMDB page (new tab)">{{series.title}}</a>
+                <ng-container *ngIf="!series.imdbUrl">{{series.title}}</ng-container>
+            </span>
+            <i class="fa fa-external-link" *ngIf="series.imdbUrl"></i>
         </div>
 
-        <div class="section m" *ngIf="series.error" style="color:darkred;">
-            <i class="fa fa-exclamation-triangle"></i>
-            <span>{{series.error}}</span>
+        <div class="section s" *ngIf="!series.error && episode">
+            <i class="fa" title="{{episode.subtitles}}"
+                [class.fa-eye]="episode.watched"
+                [class.fa-cc]="episode.collected && episode.subtitles"
+                [class.fa-hdd-o]="episode.collected && !episode.subtitles"
+                [class.fa-eye-slash]="episode.missing">
+            </i>
+            <span class="bold" [style.margin-right.px]="0">{{episode.eid}}</span>
+            <span *ngIf="more" [style.margin-right.px]="0"><sup>+{{more}}</sup></span>
+            <span>{{episode.title}}</span>
         </div>
 
-        <div class="section m" *ngIf="!series.error && !episode">
-            <i class="fa fa-quote-left"></i>
-            <span [style.opacity]="0.8">{{series.plot || 'Unknown'}}</span>
+        <div class="section m">
+            <i class="fa"
+                [class.fa-exclamation-triangle]="series.error"
+                [class.fa-quote-left]="!series.error">
+            </i>
+            <span [style.opacity]="0.6" [style.color]="series.error ? 'darkred' : 'initial'">
+                {{ series.error || (episode ? episode.plot : series.plot) || 'Unknown' }}
+            </span>
         </div>
 
-        <ng-container *ngIf="!series.error && episode">
-
-            <div class="section s">
-                <i class="fa"
-                    [class.fa-eye]="episode.watched"
-                    [class.fa-cc]="episode.collected && episode.subtitles"
-                    [class.fa-hdd-o]="episode.collected && !episode.subtitles"
-                    [class.fa-eye-slash]="episode.missing">
-                </i>
-                <span>{{episodeInfo}}</span>
-            </div>
-
-            <div class="section m">
-                <i class="fa fa-quote-left"></i>
-                <span [style.opacity]="0.7">{{episode.plot || 'Unknown'}}</span>
-            </div>
-
-            <div class="section s">
-                <i class="fa" [class.fa-clock-o]="episode.date"></i>
-                <span *ngIf="episode.date">{{episode.dateAsText(true)}}</span>
-                <span class="spacer"></span>
-                <span [class.ended]="series.ended">{{series.airing}}</span>
-            </div>
-
-        </ng-container>
+        <div class="section s" *ngIf="!series.error">
+            <i class="fa" [class.fa-clock-o]="episode.date"></i>
+            <span *ngIf="episode.date">{{episode.dateAsText(true)}}</span>
+            <span class="spacer"></span>
+            <span [class.ended]="series.ended">{{series.airing}}</span>
+        </div>
 
         <div class="tools">
             <div class="btn-group" role="group">
-                <div class="btn-group" *ngIf="!series.watchlist">
+                <div class="btn-group" *ngIf="!series.watchlist" title="Delete all data">
                     <button type="button" class="btn btn-sm btn-danger" (click)="trashSeries()">
                         <i class="fa fa-lg fa-ban"></i>
                     </button>
                 </div>
-                <div class="btn-group" *ngIf="episode">
+                <div class="btn-group" title="Refresh data from TVDB (long execution time!)">
+                    <button type="button" class="btn btn-sm btn-warning" (click)="forceRefresh()">
+                        <i class="fa fa-lg fa-refresh"></i>
+                    </button>
+                </div>
+                <div class="btn-group" *ngIf="episode" title="Toggle episode's watched status">
                     <button type="button" class="btn btn-sm btn-primary" (click)="toggleWatched()">
                         <i class="fa fa-lg fa-eye" [class.false]="!episode.watched"></i>
                     </button>
                 </div>
-                <div class="btn-group" *ngIf="episode">
+                <div class="btn-group" *ngIf="episode" title="Toggle episode's collected status">
                     <button type="button" class="btn btn-sm btn-primary" (click)="toggleCollected()">
                         <i class="fa fa-lg fa-hdd-o" [class.false]="!episode.collected"></i>
                     </button>
                 </div>
-                <div class="btn-group">
+                <div class="btn-group" title="Toggle series' watchlist status">
                     <button type="button" class="btn btn-sm btn-primary" (click)="toggleWatchlist()">
                         <i class="fa fa-lg fa-heart" [class.false]="!series.watchlist"></i>
                     </button>
                 </div>
-                <div class="btn-group" title="Series" *ngIf="series.seasons.length > 0">
+                <div class="btn-group" *ngIf="series.seasons.length > 0" title="Open seasons/episodes view">
                     <button type="button" class="btn btn-sm btn-success" (click)="modals.openSeries(series, episode ? episode.season : null)">
                         <i class="fa fa-lg fa-info-circle"></i>
-                    </button>
-                </div>
-                <div class="btn-group" *ngIf="series.imdbUrl">
-                    <button type="button" class="btn btn-sm btn-success" (click)="openLink(series.imdbUrl)">
-                        <i class="fa fa-lg fa-imdb"></i>
                     </button>
                 </div>
             </div>
