--- a/client/src/app/series-card/series-card.component.html
+++ b/client/src/app/series-card/series-card.component.html
@@ -48,7 +48,7 @@
 
         <div class="tools">
             <div class="btn-group" role="group">
-                <div class="btn-group" *ngIf="!series.watchlist" title="Delete all data">
+                <div class="btn-group" *ngIf="!series.watchlist" title="Ban series">
                     <button type="button" class="btn btn-sm btn-danger" (click)="trashSeries()">
                         <i class="fa fa-lg fa-ban"></i>
                     </button>
