--- a/client/src/app/app.component.css
+++ b/client/src/app/app.component.css
@@ -1,12 +1,19 @@
 #LinkBar {
     display: flex;
-    flex: 0 0 auto;
+    position: absolute;
+    flex-shrink: 0;
+    flex-grow: 0;
     flex-direction: column;
     justify-content: center;
-    position: absolute;
-    margin-top: 45px;
-    left: 0;
+    padding: 10px 20px 10px 0;
+    top: 45px;
+    left: -135px;
+    transition: left 0.35s;
     z-index: 10;
+}
+
+#LinkBar:hover {
+    left: -3px;
 }
 
 #LinkBar .btn {
@@ -15,16 +22,13 @@
     flex-direction: row-reverse;
     vertical-align: middle;
     font-size: 180%;
-    margin-top: 10px;
-    /*left: -2px;*/
-    left: -135px;
-    transition: left 0.35s;
-    box-shadow: 2px 2px 10px darkgray;
+    margin-bottom: 8px;
+    box-shadow: 2px 2px 10px gray;
     width: 190px;
 }
 
-#LinkBar .btn:hover {
-    left: -2px;
+#LinkBar .btn.lastView {
+    margin-bottom: 32px;
 }
 
 #LinkBar .btn * {
@@ -43,10 +47,6 @@
 #LinkBar .btn .fa {
     font-size: 110%;
     margin: auto;
-}
-
-#LinkBar .accessory {
-    margin-top: 32px;
 }
 
 #MsgBox {
