--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -26,10 +26,16 @@ app-root {
     display: flex;
     position: absolute;
     flex-direction: column;
+    /*
     align-items: center;
     flex: 1 1 auto;
     width: 100%;
     height: 100%;
+    */
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
 }
 
 
@@ -101,7 +107,7 @@ app-series-form {
     flex-shrink: 0;
     flex-direction: row;
     background-color: white;
-    box-shadow: 2px 2px 10px darkgray;
+    box-shadow: 2px 2px 10px gray;
     border: 1px solid darkgrey;
     border-radius: 4px;
     line-height: 116%;
