--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -48,7 +48,12 @@
         [gridOptions]="titleGrid" [columnDefs]="titleCols" [rowData]="titleRows">
     </ag-grid-angular>
 </div>
-<div class="form-group form-group-sm title-filter">
+<div class="title-filter input-group input-group-sm">
     <input class="form-control form-control-sm" placeholder="Search title..."
         (input)="titleFltr=$event.target.value;setRows();" />
+    <button type="button" class="btn btn-sm"
+        *ngIf="titleFltr && titleFltr.length >= 3"
+        [class.btn-success]="titleRows.length > 0"
+        [class.btn-danger]="titleRows.length <= 0"
+        (click)="modals.openSearch(titleFltr)">TVDB</button>
 </div>
